--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   google_fonts: ^4.0.3
   intl: ^0.17.0
   url_launcher: ^6.1.10
+  firebase_crashlytics: ^3.1.0
+  firebase_core: ^2.9.0
+  oktoast: ^3.3.1
 
 dev_dependencies:
   flutter_test:
