--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_crashlytics: ^3.1.0
   firebase_core: ^2.9.0
   oktoast: ^3.3.1
+  flutter_cached_pdfview: ^0.4.1
 
 dev_dependencies:
   flutter_test:
