--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,8 +32,8 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-configurations.all {
-    resolutionStrategy {
-        force 'androidx.core:core-ktx:1.6.0'
-    }
-}
+// configurations.all {
+//     resolutionStrategy {
+//         force 'androidx.core:core-ktx:1.6.0'
+//     }
+// }
