--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   oktoast: ^3.3.1
   internet_file: ^1.2.0
   pdfx: ^2.3.0
+  markdown_widget: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -40,4 +41,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/documents/
     - pubspec.yaml
