--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   firebase_crashlytics: ^3.1.0
   firebase_core: ^2.9.0
   oktoast: ^3.3.1
-  internet_file: ^1.2.0
-  pdfx: ^2.3.0
   markdown_widget: ^2.1.0
+  pdf_render: ^1.3.8
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
