--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Stundenplan
 
 publish_to: "none"
 
-version: 1.3.3+1
+version: 1.4.0+1
 
 environment:
   sdk: ">=2.19.4 <3.0.0"
@@ -13,13 +13,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  salomon_bottom_bar: ^3.3.1
-  shared_preferences: ^2.1.0
-  flutter_redux: ^0.10.0
   redux: ^5.0.0
   yaml: ^3.1.1
-  webview_flutter: ^4.0.7
   html: ^0.15.2
   http: ^0.13.5
   google_fonts: ^4.0.3
@@ -31,6 +26,14 @@ dependencies:
   markdown_widget: ^2.1.0
   pdf_render: ^1.3.8
   path_provider: ^2.0.14
+  sqflite: ^2.2.8+2
+  cupertino_icons: ^1.0.5
+  salomon_bottom_bar: ^3.3.2
+  shared_preferences: ^2.1.1
+  flutter_redux: ^0.10.0
+  path: ^1.8.3
+  mutex: ^3.0.1
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_test:
