--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Stundenplan
 
 publish_to: "none"
 
-version: 1.4.0+1
+version: 1.4.1+1
 
 environment:
   sdk: ">=2.19.4 <3.0.0"
@@ -21,7 +21,7 @@ dependencies:
   intl: ^0.18.0
   url_launcher: ^6.1.10
   firebase_crashlytics: ^3.1.0
-  firebase_core: ^2.9.0
+  firebase_core: ^2.15.0
   oktoast: ^3.3.1
   markdown_widget: ^2.1.0
   pdf_render: ^1.3.8
@@ -34,6 +34,8 @@ dependencies:
   path: ^1.8.3
   mutex: ^3.0.1
   flutter_inappwebview: ^5.7.2+3
+  local_auth: ^2.1.6
+  firebase_messaging: ^14.6.5
 
 dev_dependencies:
   flutter_test:
