--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: Stundenplan
 
 publish_to: "none"
 
-version: 1.5.0+3
+version: 1.5.1+4
 
 environment:
-  sdk: ">=2.19.4 <3.0.0"
+  sdk: ">=3.0.0"
 dependencies:
   flutter:
     sdk: flutter
@@ -16,8 +16,8 @@ dependencies:
   redux: ^5.0.0
   yaml: ^3.1.1
   html: ^0.15.2
-  http: ^0.13.5
-  google_fonts: ^4.0.3
+  http: ^1.1.0
+  google_fonts: ^5.1.0
   intl: ^0.18.0
   url_launcher: ^6.1.10
   firebase_crashlytics: ^3.1.0
@@ -35,7 +35,6 @@ dependencies:
   mutex: ^3.0.1
   flutter_inappwebview: ^5.7.2+3
   local_auth: ^2.1.6
-  firebase_messaging: ^14.6.5
   flutter_local_notifications: ^15.1.0+1
   workmanager: ^0.5.1
   disable_battery_optimization: ^1.1.0+1
@@ -43,11 +42,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.3
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/documents/
     - pubspec.yaml
+    - CHANGELOG.md
