--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,9 +75,12 @@ android {
    }
    
    buildTypes {
-       release {
-           signingConfig signingConfigs.release
-       }
+        debug {
+            applicationIdSuffix = ".debug"
+        }
+        release {
+            signingConfig signingConfigs.release
+        }
    }
     buildFeatures {
         viewBinding true
@@ -94,6 +97,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:review-ktx:2.0.1'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
 
