--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Stundenplan
 
 publish_to: "none"
 
-version: 1.5.1+4
+version: 1.5.2+6
 
 environment:
   sdk: ">=3.0.0"
@@ -14,30 +14,31 @@ dependencies:
     sdk: flutter
 
   redux: ^5.0.0
-  yaml: ^3.1.1
-  html: ^0.15.2
+  yaml: ^3.1.2
+  html: ^0.15.4
   http: ^1.1.0
-  google_fonts: ^5.1.0
-  intl: ^0.18.0
-  url_launcher: ^6.1.10
-  firebase_crashlytics: ^3.1.0
-  firebase_core: ^2.15.0
-  oktoast: ^3.3.1
-  markdown_widget: ^2.1.0
-  pdf_render: ^1.3.8
-  path_provider: ^2.0.14
-  sqflite: ^2.2.8+2
-  cupertino_icons: ^1.0.5
+  google_fonts: ^6.1.0
+  intl: ^0.18.1
+  url_launcher: ^6.1.14
+  firebase_crashlytics: ^3.3.6
+  firebase_core: ^2.16.0
+  oktoast: ^3.3.2
+  markdown_widget: ^2.2.0
+  pdf_render: ^1.4.0
+  path_provider: ^2.1.1
+  sqflite: ^2.3.0
+  cupertino_icons: ^1.0.6
   salomon_bottom_bar: ^3.3.2
-  shared_preferences: ^2.1.1
+  shared_preferences: ^2.2.1
   flutter_redux: ^0.10.0
   path: ^1.8.3
   mutex: ^3.0.1
   flutter_inappwebview: ^5.7.2+3
-  local_auth: ^2.1.6
-  flutter_local_notifications: ^15.1.0+1
+  local_auth: ^2.1.7
+  flutter_local_notifications: ^15.1.1
   workmanager: ^0.5.1
   disable_battery_optimization: ^1.1.0+1
+  advanced_in_app_review: ^1.2.0
 
 dev_dependencies:
   flutter_test:
